--- a/js_books_search/google_books.html
+++ b/js_books_search/google_books.html
@@ -1,21 +1,62 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GoogleBooksAPIでAjaxを学ぶ</title>
+  <style>
+    td {
+      border-bottom: 1px solid #ccc;
+      border-left: 1px solid #ccc;
+    }
+  </style>
 </head>
+
 <body>
+  <h1>book検索</h1>
+  <div>
+    <input type="text" id="key">
+    <button id="send">検索</button>
+  </div>
+  <div>
+    <table id="list">
+      <tr>
+        <td style="width: 400px;">書籍名</td>
+        <td style="width: 100px;">出版社</td>
+        <td style="width: 400px;">画像</td>
+      </tr>
+    </table>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
-    const url = "https://www.googleapis.com/books/v1/volumes?q=jquery";
-
-
-
-
+    $("#send").on("click", function(){
+      const url = "https://www.googleapis.com/books/v1/volumes?q="+$("#key").val();
+      $.ajax({
+        url: url,
+        dataType: "json" //検索した結果をjson文字列で取得
+      }).done(function (data) {//戻ってくるデータ型を指定してあげると楽
+        console.log(data);
+        const len = data.items.length; 
+        let html;
+        for(let i=0; i<len; i++){
+          html += `
+          <tr>
+            <td>${data.items[i].volumeInfo.title}</td>
+            <td>${data.items[i].volumeInfo.publisher}</td>
+            <td><img src="${data.items[i].volumeInfo.imageLinks.smallThumbnail}"></td>
+          </tr>
+          `;
+        }
+        //table要素のidに追加
+        $("#list").empty();
+        $("#list").append(html);
+      });
+    })
+    // Ajaxを使ってapiにアクセルしjsonデータ取得
+    // open with live Server
   </script>
-
-
-  
 </body>
+
 </html>
